<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondActivity">

    <TextView
        android:id="@+id/tvIos2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="88dp"
        android:layout_marginTop="80dp"
        android:text="@string/ios"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvAndroid2" />

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="65dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#ff6750a4"
            android:text="@string/title"
            android:textColor="@color/white" />
    </LinearLayout>

    <TextView
        android:id="@+id/tvAndroid2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:layout_marginTop="56dp"
        android:text="@string/android"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout5" />

    <EditText
        android:id="@+id/etAndroid"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="44dp"
        android:ems="10"
        android:hint="@string/android_count"
        android:inputType="text"
        android:text="@string/android_count"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.452"
        app:layout_constraintStart_toEndOf="@+id/tvAndroid2"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout5" />

    <EditText
        android:id="@+id/etIos"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="44dp"
        android:ems="10"
        android:hint="@string/ios_count"
        android:inputType="text"
        android:text="@string/ios_count"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.467"
        app:layout_constraintStart_toEndOf="@+id/tvIos2"
        app:layout_constraintTop_toBottomOf="@+id/etAndroid" />

    <Button
        android:id="@+id/btnReturnToMain"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="52dp"
        android:text="@string/returnToMain"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.484"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>